--- a/csharp-tree-sitter.csproj
+++ b/csharp-tree-sitter.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>disable</Nullable>
     <PlatformTarget>x64</PlatformTarget>
@@ -10,12 +10,22 @@
   </PropertyGroup>
 
   <ItemGroup>
-   <Compile Include="tests\test.cs" />
-   <Compile Include="src\binding.cs" />
+    <Compile Include="src\binding.cs" />
+    <Compile Include="src\TypeScriptParser.cs" />
+    <Compile Include="tests\Main.cs" />
+    <Compile Include="tests\TypeScriptAnalyzer.cs" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="SharpToken" Version="1.2.2" />
   </ItemGroup>
+
+  <Target Name="CopyNativeLibraries" AfterTargets="Build">
+    <ItemGroup>
+      <NativeLibraries Include="tree-sitter\dist\*.dll" />
+    </ItemGroup>
+    <Copy SourceFiles="@(NativeLibraries)" DestinationFolder="$(OutputPath)" SkipUnchangedFiles="true" />
+    <Message Text="Copied native libraries from tree-sitter\dist to $(OutputPath)" Importance="high" />
+  </Target>
 
 </Project>
