Restructure project to TypeScriptParser with comprehensive test suite
- Rename csharp-tree-sitter to TypeScriptParser for clarity
- Reorganize solution structure with separate test project
- Add comprehensive xUnit tests for parser and analyzer functionality
- Update README with detailed usage examples and API documentation
- Remove demo files and consolidate project structure

--- a/TypeScriptParser/TypeScriptParser.csproj
+++ b/TypeScriptParser/TypeScriptParser.csproj
@@ -1,7 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>disable</Nullable>
@@ -12,8 +11,6 @@
   <ItemGroup>
     <Compile Include="src\binding.cs" />
     <Compile Include="src\TypeScriptParser.cs" />
-    <Compile Include="tests\Main.cs" />
-    <Compile Include="tests\TypeScriptAnalyzer.cs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -22,10 +19,10 @@
 
   <Target Name="CopyNativeLibraries" AfterTargets="Build">
     <ItemGroup>
-      <NativeLibraries Include="tree-sitter\dist\*.dll" />
+      <NativeLibraries Include="../tree-sitter/dist/*.dll" />
     </ItemGroup>
     <Copy SourceFiles="@(NativeLibraries)" DestinationFolder="$(OutputPath)" SkipUnchangedFiles="true" />
-    <Message Text="Copied native libraries from tree-sitter\dist to $(OutputPath)" Importance="high" />
+    <Message Text="Copied native libraries from tree-sitter/dist to $(OutputPath)" Importance="high" />
   </Target>
 
 </Project>
