Refactor native library management to use NuGet packages
- Replace manual DLL copying with TypeScriptParser.Native package
- Update DllImport declarations to use cross-platform library names
- Add NuGet package metadata and build configuration
- Remove hardcoded .dll extensions for Linux/macOS compatibility
- Add build scripts and native library project structure

--- a/TypeScriptParser.Tests/TypeScriptParser.Tests.csproj
+++ b/TypeScriptParser.Tests/TypeScriptParser.Tests.csproj
@@ -23,12 +23,6 @@
     <ProjectReference Include="..\TypeScriptParser\TypeScriptParser.csproj" />
   </ItemGroup>
 
-  <Target Name="CopyNativeLibraries" AfterTargets="Build">
-    <ItemGroup>
-      <NativeLibraries Include="../tree-sitter/dist/*.dll" />
-    </ItemGroup>
-    <Copy SourceFiles="@(NativeLibraries)" DestinationFolder="$(OutputPath)" SkipUnchangedFiles="true" />
-    <Message Text="Copied native libraries from tree-sitter/dist to $(OutputPath)" Importance="high" />
-  </Target>
+  <!-- Native libraries now managed automatically via NuGet packages -->
 
 </Project>
