--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,7 +48,7 @@ jobs:
         cp tree-sitter/dist/* TypeScriptParser.Native/runtimes/${{ matrix.rid }}/native/
         
     - name: Upload Native Libraries
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: native-${{ matrix.rid }}
         path: TypeScriptParser.Native/runtimes/${{ matrix.rid }}/native/
@@ -66,8 +66,9 @@ jobs:
         dotnet-version: '9.0.x'
         
     - name: Download Native Libraries
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
+        pattern: native-*
         path: TypeScriptParser.Native/runtimes/
         
     - name: Cache NuGet packages
@@ -96,14 +97,14 @@ jobs:
       run: dotnet test TypeScriptParser.Tests --no-build --configuration Release --logger trx --results-directory TestResults/
       
     - name: Upload Test Results
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       if: always()
       with:
         name: test-results
         path: TestResults/
         
     - name: Upload Build Artifacts
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: build-artifacts
         path: |
