Update build process to use local native library references
- Add native library compilation steps to README build instructions
- Replace NuGet package reference with local project reference for TypeScriptParser.Native
- Import native library build targets in test project
- Enable local development workflow with runtime-specific native binaries

--- a/TypeScriptParser.Tests/TypeScriptParser.Tests.csproj
+++ b/TypeScriptParser.Tests/TypeScriptParser.Tests.csproj
@@ -19,9 +19,16 @@
     <Using Include="Xunit" />
   </ItemGroup>
 
+
+
   <ItemGroup>
     <ProjectReference Include="..\TypeScriptParser\TypeScriptParser.csproj" />
   </ItemGroup>
+
+  <!-- 导入Native库构建目标 - 必须在项目末尾 -->
+  <Import Project="..\TypeScriptParser.Native\build\TypeScriptParser.Native.targets"
+          Condition="Exists('..\TypeScriptParser.Native\build\TypeScriptParser.Native.targets')" />
+
 
   <!-- Native libraries now managed automatically via NuGet packages -->
 
