Fix artifact upload path in CI workflow
Remove '/native/' suffix from artifact path to correctly upload the entire runtime directory structure.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: native-${{ matrix.rid }}
-        path: TypeScriptParser.Native/runtimes/${{ matrix.rid }}/native/
+        path: TypeScriptParser.Native/runtimes/${{ matrix.rid }}/
         retention-days: 1
 
   build-and-test:
