Add debug output for native runtime directory path
Show the directory path before listing contents to improve CI debugging

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,7 @@ jobs:
         mkdir -p TypeScriptParser.Native/runtimes/${{ matrix.rid }}/native
         cp -r tree-sitter/dist/* TypeScriptParser.Native/runtimes/${{ matrix.rid }}/native/
         echo "Files copied for ${{ matrix.rid }}:"
+        echo TypeScriptParser.Native/runtimes/${{ matrix.rid }}/native/
         ls -la TypeScriptParser.Native/runtimes/${{ matrix.rid }}/native/
       shell: bash
         
