Fix artifact upload path in CI workflow
Remove matrix.rid from artifact path to upload entire runtimes directory

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: native-${{ matrix.rid }}
-        path: TypeScriptParser.Native/runtimes/${{ matrix.rid }}/
+        path: TypeScriptParser.Native/runtimes/
         retention-days: 1
 
   build-and-test:
