--- a/TypeScriptParser.TestPackage/TypeScriptParser.TestPackage.csproj
+++ b/TypeScriptParser.TestPackage/TypeScriptParser.TestPackage.csproj
@@ -10,7 +10,7 @@
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
-    <PackageReference Include="TypeScriptParser" Version="1.0.0" />
+    <PackageReference Include="TypeScriptParser" Version="0.0.1-dev" />
     <PackageReference Include="xunit" Version="2.9.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2" />
   </ItemGroup>
