--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -110,14 +110,6 @@ jobs:
       with:
         name: nuget-packages
         path: artifacts/*.nupkg
-        
-    - name: Publish to NuGet
-      if: startsWith(github.ref, 'refs/tags/v')
-      run: |
-        dotnet nuget push artifacts/*.nupkg \
-          --api-key ${{ secrets.NUGET_API_KEY }} \
-          --source https://api.nuget.org/v3/index.json \
-          --skip-duplicate
 
   package-test:
     needs: pack-and-publish
@@ -167,3 +159,22 @@ jobs:
     - name: Test Package
       run: dotnet test TypeScriptParser.TestPackage/ -c Release
       shell: bash
+
+  publish:
+    needs: package-test
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/v')
+    
+    steps:
+    - name: Download NuGet Packages
+      uses: actions/download-artifact@v4
+      with:
+        name: nuget-packages
+        path: ./artifacts
+        
+    - name: Publish to NuGet
+      run: |
+        dotnet nuget push artifacts/*.nupkg \
+          --api-key ${{ secrets.NUGET_API_KEY }} \
+          --source https://api.nuget.org/v3/index.json \
+          --skip-duplicate
