ci: fix dotnet command paths in package testing workflow
The dotnet remove and add commands now specify the full project file path instead of changing directories, making the commands more explicit and avoiding potential path-related issues in the CI environment.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -151,9 +151,8 @@ jobs:
       
     - name: Update Package Reference
       run: |
-        cd TypeScriptParser.TestPackage
-        dotnet remove package TypeScriptParser
-        dotnet add package TypeScriptParser --version $VERSION --source local
+        dotnet remove TypeScriptParser.TestPackage/TypeScriptParser.TestPackage.csproj package TypeScriptParser
+        dotnet add TypeScriptParser.TestPackage/TypeScriptParser.TestPackage.csproj package TypeScriptParser --version $VERSION --source local
       shell: bash
       
     - name: Test Package
