Add dotnet restore step before testing package in CI
This ensures dependencies are properly restored before running tests on the TypeScriptParser.TestPackage, preventing potential build failures due to missing dependencies.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -155,6 +155,10 @@ jobs:
         dotnet add TypeScriptParser.TestPackage/TypeScriptParser.TestPackage.csproj package TypeScriptParser --version $VERSION --source ./artifacts
       shell: bash
       
+    - name: Restore Dependencies
+      run: dotnet restore TypeScriptParser.TestPackage/
+      shell: bash
+      
     - name: Test Package
       run: dotnet test TypeScriptParser.TestPackage/ -c Release
       shell: bash
