--- a/TypeScriptParser.TestPackage/TypeScriptParser.TestPackage.csproj
+++ b/TypeScriptParser.TestPackage/TypeScriptParser.TestPackage.csproj
@@ -5,6 +5,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
+    <!-- 测试项目不需要XML文档注释 -->
+    <NoWarn>$(NoWarn);CS1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
