--- a/TypeScriptParser.Tests/TypeScriptParser.Tests.csproj
+++ b/TypeScriptParser.Tests/TypeScriptParser.Tests.csproj
@@ -6,6 +6,8 @@
     <Nullable>disable</Nullable>
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
+    <!-- 测试项目不需要XML文档注释 -->
+    <NoWarn>$(NoWarn);CS1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
