--- a/TypeScriptParser/TypeScriptParser.csproj
+++ b/TypeScriptParser/TypeScriptParser.csproj
@@ -1,24 +1,24 @@
-<Project Sdk="Microsoft.NET.Sdk">
-
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <ImplicitUsings>disable</ImplicitUsings>
-    <Nullable>disable</Nullable>
     <PackageId>TypeScriptParser</PackageId>
     <Description>TypeScript语法解析器 - 基于Tree-sitter的.NET绑定</Description>
-    <PackageTags>tree-sitter;typescript;parser;syntax;ast</PackageTags>
-    <NoWarn>$(NoWarn);CS1591</NoWarn>
+    <PackageTags>tree-sitter;typescript;parser;syntax;ast;native</PackageTags>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <NoWarn>$(NoWarn);NU5128;CS1591</NoWarn>
   </PropertyGroup>
 
   <!-- README文件包含到包中 -->
   <ItemGroup>
-    <None Include="..\README.md" Pack="true" PackagePath="\" />
+    <None Include="README.md" Pack="true" PackagePath="\" />
   </ItemGroup>
 
-  <!-- Native库依赖 -->
+  <!-- 包含runtime和build文件到NuGet包 -->
   <ItemGroup>
-    <ProjectReference Include="..\TypeScriptParser.Native\TypeScriptParser.Native.csproj" />
+    <Content Include="runtimes/**/*" Pack="true" PackagePath="runtimes/" />
+    <Content Include="build/**/*" Pack="true" PackagePath="build/" />
+    <Content Include="buildTransitive/**/*" Pack="true" PackagePath="buildTransitive/" />
   </ItemGroup>
 
 </Project>
