Update package integration and add source generator support
- Simplify README test instructions for generic project usage
- Add TypeScriptParser.targets import to main project file
- Replace AdditionalFiles with AssemblyMetadata for native path export
- Remove IsSourceGenerator condition to ensure native files copy to all projects

--- a/TypeScriptParser/TypeScriptParser.csproj
+++ b/TypeScriptParser/TypeScriptParser.csproj
@@ -21,4 +21,7 @@
     <Content Include="buildTransitive/**/*" Pack="true" PackagePath="buildTransitive/" />
   </ItemGroup>
 
+  <!-- 导入 TypeScriptParser.targets 以获取 TypeScriptParserNativePath 元数据 -->
+  <Import Project="build/TypeScriptParser.targets" />
+
 </Project>
