--- a/DemoSourceGenerator/DemoSourceGenerator.csproj
+++ b/DemoSourceGenerator/DemoSourceGenerator.csproj
@@ -20,18 +20,18 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.4" PrivateAssets="all" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.5.0" PrivateAssets="all" />
-    <PackageReference Include="TypeScriptParser" Version="0.0.1-dev" />
   </ItemGroup>
 
   <ItemGroup>
     <!-- <ProjectReference Include="../TypeScriptParser/TypeScriptParser.csproj" />
     <TargetPathWithTargetPlatformMoniker Include="../TypeScriptParser/bin/Debug/netstandard2.1/TypeScriptParser.dll" IncludeRuntimeDependency="false" /> -->
 
-    <PackageReference Include="TypeScriptParser" Version="0.0.1-dev" />
-    <TargetPathWithTargetPlatformMoniker Include="../TypeScriptParser/bin/Debug/netstandard2.1/TypeScriptParser.dll" IncludeRuntimeDependency="false" />
+    <!-- <PackageReference Include="TypeScriptParser" Version="0.0.1-dev" />
+    <TargetPathWithTargetPlatformMoniker Include="../TypeScriptParser/bin/Debug/netstandard2.1/TypeScriptParser.dll" IncludeRuntimeDependency="false" /> -->
 
-    <!-- <PackageReference Include="TypeScriptParser" Version="0.2.8.31" IncludeAssets="all" GeneratePathProperty="true" />
-    <TargetPathWithTargetPlatformMoniker Include="$(PkgTypeScriptParser)\lib\netstandard2.1\TypeScriptParser.dll" IncludeRuntimeDependency="false" /> -->
+    <!-- <PackageReference Include="TypeScriptParser" Version="0.2.10-dev.34" IncludeAssets="all" GeneratePathProperty="true" /> -->
+    <PackageReference Include="TypeScriptParser" Version="0.2.10-dev.34"/>
+    <TargetPathWithTargetPlatformMoniker Include="$(PkgTypeScriptParser)\lib\netstandard2.1\TypeScriptParser.dll" IncludeRuntimeDependency="false" />
   </ItemGroup>
 
 </Project>
