--- a/TypeScriptParser.Tests/TypeScriptParser.Tests.csproj
+++ b/TypeScriptParser.Tests/TypeScriptParser.Tests.csproj
@@ -26,9 +26,8 @@
   </ItemGroup>
 
   <!-- 导入Native库构建目标 - 必须在项目末尾 -->
-  <Import Project="..\TypeScriptParser\build\TypeScriptParser.targets"
-          Condition="Exists('..\TypeScriptParser\build\TypeScriptParser.targets')" />
-
+  <Import Project="..\TypeScriptParser\build\TypeScriptParser.props" />
+  <Import Project="..\TypeScriptParser\build\TypeScriptParser.targets" />
 
   <!-- Native libraries now managed automatically via NuGet packages -->
 
